# static-bliki

./: .gitignore  CLAUDE.md  README.md  bliki.yaml  pyproject.toml
bliki/: builder.py  cli.py  config.py  feed.py  images.py  links.py  models.py  renderer.py  scanner.py
docs/plans/: 2026-02-22-bliki-design.md  2026-02-22-bliki-implementation.md
templates/: base.html  category.html  category_index.html  post.html  post_index.html  search.html  wiki.html  wiki_index.html
templates/static/css/: main.css
templates/static/js/: main.js
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_feed.py  test_images.py  test_integration.py  test_links.py  test_pagefind.py  test_renderer.py  test_scanner.py  test_templates.py
themes/pelican-pickles/: theme.conf
themes/pelican-pickles/static/css/: main.css
themes/pelican-pickles/templates/: article.html  base.html  categories.html  index.html  tags.html
